distortion fix

--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -1,6 +1,6 @@
 /* -------------------- Home ------------------- */
 .angelo-pic{
-    max-height: 400px;
+    max-height: 350px;
     height: auto;
     max-width: 100%
     width:auto;
